[gd_scene load_steps=21 format=2]

[ext_resource path="res://Shader_Stuff/SmoothPixelFiltering/SmoothPixel.tres" type="Material" id=1]
[ext_resource path="res://Assets/Item/Bubble/Bubble_animation-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Actors/Item/Bubble/Bubble.gd" type="Script" id=3]
[ext_resource path="res://Assets/Item/Bubble/arrow-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/Item/Bubble/character_shadow-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/Item/Bubble/effect-Sheet.png" type="Texture" id=6]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.167785, 1 ), -0.135454, -0.135454, 0, 0, Vector2( 0.365772, -0.196364 ), -1.34036, -1.34036, 0, 0, Vector2( 0.5, 0 ), -0.0744057, 0.0, 0, 0 ]

[sub_resource type="Curve" id=4]
min_value = -1.0
max_value = 0.0
_data = [ Vector2( 0, -0.00909092 ), 0.0, -7.90151, 0, 0, Vector2( 0.0671141, -0.245455 ), 0.0, 0.0, 0, 0, Vector2( 0.308725, 0 ), 1.01591, 0.0, 1, 0 ]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="Animation" id=12]
resource_name = "I_Idle_anim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BubbleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=2]
resource_name = "N_Idle_anim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BubbleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BubbleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BubbleSprite/ArrowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "arrow_appear_anim"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("BubbleSprite/ArrowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 1, 2, 0 ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "ice_effect_anim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../BubbleSprite/CharacterShadowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "appear_anim"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../BubbleSprite/CharacterShadowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_called_character_shadow_to_idle"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle_anim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../BubbleSprite/CharacterShadowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 13.0384

[node name="Bubble" type="Area2D" groups=["Bubble"]]
z_index = 2
collision_layer = 0
script = ExtResource( 3 )
absorb_curve = SubResource( 3 )
eject_curve = SubResource( 4 )

[node name="EnterShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="BubbleSprite" type="Sprite" parent="."]
material = ExtResource( 1 )
texture = ExtResource( 2 )
hframes = 8
vframes = 2
frame = 8

[node name="ArrowSprite" type="Sprite" parent="BubbleSprite"]
visible = false
material = ExtResource( 1 )
position = Vector2( -0.5, -23 )
texture = ExtResource( 4 )
hframes = 6
frame = 1

[node name="CharacterShadowSprite" type="Sprite" parent="BubbleSprite"]
visible = false
material = ExtResource( 1 )
texture = ExtResource( 5 )
hframes = 7
vframes = 2

[node name="EffectSprite" type="Sprite" parent="BubbleSprite"]
visible = false
material = ExtResource( 1 )
texture = ExtResource( 6 )
hframes = 8

[node name="BubbleAnimationPlayer" type="AnimationPlayer" parent="."]
anims/I_Idle_anim = SubResource( 12 )
anims/N_Idle_anim = SubResource( 2 )
anims/RESET = SubResource( 13 )

[node name="ArrowAniamtionPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/arrow_appear_anim = SubResource( 6 )

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../BubbleSprite/EffectSprite")
anims/RESET = SubResource( 14 )
anims/ice_effect_anim = SubResource( 15 )

[node name="CharacterShadowAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ArrowAniamtionPlayer")
anims/RESET = SubResource( 7 )
anims/appear_anim = SubResource( 8 )
anims/idle_anim = SubResource( 9 )

[node name="Label2" type="Label" parent="."]
margin_left = -20.0
margin_top = -47.0
margin_right = 20.0
margin_bottom = -33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -31.0
margin_right = 20.0
margin_bottom = -17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 20

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 11 )

[node name="NormalPostion" type="Position2D" parent="."]

[node name="IcePostion" type="Position2D" parent="."]
position = Vector2( 0, 65 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -66 )

[connection signal="body_entered" from="." to="." method="_on_Bubble_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
